# podcast-automator

./: .dockerignore  .gitignore  sample.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: README.md  pyproject.toml  run.py
api/src/: config.py  errors.py  main.py
api/src/middleware/: auth.py
api/src/routers/: episodes.py  feeds.py  media.py  podcasts.py  rss.py
api/src/schemas/: episode.py  podcast.py  rss.py
api/src/services/: media_uploader.py  r2_client.py  rss_backup.py  rss_builder.py  rss_parser.py  rss_publisher.py
api/tests/: test_media_upload.py  test_rss_workflow.py
app/: README.md
app/examples/: example_storage_download.py
app/src/services/: storage.py
infrastructure/: iam.tf  services.tf
specs/001-podcast-ui-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-podcast-ui-editor/checklists/: requirements.md
specs/001-podcast-ui-editor/contracts/: api.yml
web/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: artwork-uploader.tsx  audio-uploader.tsx  episode-create-form.tsx  episode-filters.tsx  episode-list.tsx  podcast-editor.tsx
web/src/services/: api.ts
web/tests/: media_upload.test.tsx  rss_editor.test.tsx
